2006-10-28 09:41-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassEditor.gorm: Add tool tips for button and
	for pulldown.

2006-10-27  Matt Rice <ratmice@yahoo.com>
	
	* Palettes/3Containers/GormTableViewEditor.m: Change documentRect to
	documentVisibleRect.

2006-10-23 01:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormHelpInspector.gorm: Change resize properties.
	* GormCore/GormHelpInspector.m: in revert: blank text field when
	no connections are retrieved.

2006-10-23 01:14-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormHelpInspector.gorm: Help inspector .gorm file.
	* GNUmakefile: Add .gorm file.
	* GormCore/GNUmakefile: Add new class.
	* GormCore/GormConnectionInspector.m: Call [super ok:] from ok: method.
	* GormCore/GormHelpInspector.[hm]: Implemented the beginnings of
	the help inspector.
	* GormCore/GormObjectEditor.m: Add helpInspectorClassName 
	implementation to NSView category.

2006-10-21 23:51-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSTableViewInspector.gorm: Added
	connection from tag form to tagForm instance variable.
	* Palettes/3Containers/GormTableViewAttributesInspector.m: Cleaned
	up includes.

2006-10-21 16:06-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormConnectionInspector.m: Added awakeFromNib method
	to call setDoubleAction: on the newBrowser (connection) object
	so that double click will now cause a connection to be made.
	* GormCore/GormGenericEditor.m: Initialize local variables in
	refreshCells method.

2006-10-21 11:45-EDT Matt Rice <ratmice@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: Implement documentRect.
	Since the editor is the table's superview, it will take its size from
	the editor.  Corrects bug#18073
	Patch committed by Gregory John Casamento <greg_casamento@yahoo.com>
	
2006-10-20 20:08-EDT Gregory John Casamento <greg_casamento@yahoo.com>
